recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:9: error: not found: value lenght
    return tree(steps-1,length,angle,shrink*lenght)  
                                            ^Tree:12: error: Double does not take parameters
    recule(length()*2:Double)
                 ^